--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,99 +1,84 @@
 <div
-    class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden"
+    class="login_container w-100 h-100 d-flex justify-content-center align-items-center p-4"
 >
-    <div class="flex flex-column align-items-center justify-content-center">
-        <!-- <img
-            src="assets/layout/images/{{
-                layoutService.config.colorScheme === 'light'
-                    ? 'logo-dark'
-                    : 'logo-white'
-            }}.svg"
-            alt="Sakai logo"
-            class="mb-5 w-6rem flex-shrink-0"
-        /> -->
-        <div
-            style="
-                border-radius: 56px;
-                padding: 0.3rem;
-                background: linear-gradient(
-                    180deg,
-                    var(--primary-color) 10%,
-                    rgba(33, 150, 243, 0) 30%
-                );
-            "
-        >
-            <div
-                class="w-full surface-card py-8 px-5 sm:px-8"
-                style="border-radius: 53px"
-            >
-                <div class="text-center mb-5">
-                    <div class="text-900 text-3xl font-medium mb-3">
-                        Welcome!
-                    </div>
-                    <span class="text-600 font-medium"
-                        >Sign in to continue</span
-                    >
-                </div>
+    <form
+        class="login_container_form d-flex flex-column col-12 lg:col-6 xl:col-4 p-4 rounded-2"
+        [formGroup]="loginForm"
+        (ngSubmit)="login()"
+    >
+        <app-logo class="m-auto"></app-logo>
+        <span class="my-4">
+            <h6>Email</h6>
 
-                <div>
-                    <label
-                        for="email1"
-                        class="block text-900 text-xl font-medium mb-2"
-                        >Email</label
-                    >
-                    <input
-                        id="email1"
-                        type="text"
-                        placeholder="Email address"
-                        [(ngModel)]="email"
-                        pInputText
-                        class="w-full md:w-30rem mb-5"
-                        style="padding: 1rem"
-                    />
-
-                    <label
-                        for="password1"
-                        class="block text-900 font-medium text-xl mb-2"
-                        >Password</label
-                    >
-                    <p-password
-                        id="password1"
-                        [(ngModel)]="password"
-                        placeholder="Password"
-                        [toggleMask]="true"
-                        styleClass="mb-2"
-                        inputStyleClass="w-full p-3 md:w-30rem"
-                    ></p-password>
-                    <div class="text-danger text-center" *ngIf="err">
-                        Incorrect authentication
-                    </div>
-
-                    <div
-                        class="flex align-items-center justify-content-between mb-5 gap-5"
-                    >
-                        <!-- <div class="flex align-items-center">
-                            <p-checkbox
-                                id="rememberme1"
-                                [binary]="true"
-                                styleClass="mr-2"
-                            ></p-checkbox>
-                            <label for="rememberme1">Remember me</label>
-                        </div>
-                        <a
-                            class="font-medium no-underline ml-2 text-right cursor-pointer"
-                            style="color: var(--primary-color)"
-                            >Forgot password?</a
-                        > -->
-                    </div>
-                    <button
-                        pButton
-                        pRipple
-                        label="Sign In"
-                        class="w-full p-3 text-xl"
-                        (click)="login()"
-                    ></button>
-                </div>
+            <input
+                class="w-100 ps-2 mt-1"
+                name="emailInput"
+                type="text"
+                pInputText
+                formControlName="userEmail"
+                [ngClass]="{
+                    'ng-invalid ng-dirty': loginForm
+                        .get('userEmail')
+                        ?.hasError('required')
+                }"
+                (focus)="clearErrorNotification()"
+            />
+            <div *ngIf="isSubmitted">
+                <small
+                    class="text-danger"
+                    *ngIf="loginForm.get('userEmail')?.hasError('required')"
+                    >Email is required</small
+                >
+                <small
+                    class="text-danger"
+                    *ngIf="
+                        loginForm.get('userEmail')?.hasError('emailValidator')
+                    "
+                    >Please fill the correct email</small
+                >
             </div>
+        </span>
+        <span class="mb-1">
+            <h6>Password</h6>
+            <p-password
+                class="inputtext w-100 mt-1 form-control"
+                [toggleMask]="true"
+                formControlName="userPassword"
+                (focus)="clearErrorNotification()"
+                [feedback]="false"
+            >
+            </p-password>
+            <div *ngIf="isSubmitted">
+                <small
+                    class="text-danger"
+                    *ngIf="loginForm.get('userPassword')?.hasError('required')"
+                >
+                    Password is required.
+                </small>
+                <small class="text-danger text-center" *ngIf="msgError">
+                    {{ msgError }}.
+                </small>
+            </div>
+        </span>
+        <a class="text-end" routerLink="/auth/forgot-password"
+            >Forgot password</a
+        >
+        <div class="btn-container d-flex justify-content-center pt-4">
+            <button
+                type="submit"
+                class="btn btn-primary w-100 text-nowrap rounded-3"
+            >
+                Sign in
+            </button>
         </div>
-    </div>
+        <p class="mx-auto my-4">
+            No account yet? <a routerLink="/auth/register">Register for free</a>
+        </p>
+        <p-divider class="mx-auto mb-2">or</p-divider>
+        <asl-google-signin-button
+            class="mx-auto"
+            type="standard"
+            size="large"
+        ></asl-google-signin-button>
+    </form>
 </div>
