--- a/src/app/components/user-pages/shop-view/shop-view.component.html
+++ b/src/app/components/user-pages/shop-view/shop-view.component.html
@@ -51,69 +51,80 @@
 </div> -->
 
 <div class="shopView d-flex">
-  <div class="shopView-filter col-sm-6 col-md-2">
-    <div class="side-filter d-flex flex-column p-2">
-      <div class="cate-type w-100 p-2">
-        <h4>Filter</h4>
-        <div class="search-bar w-100 d-flex flex-nowrap">
-          <span class="p-input-icon-left w-100 pe-2">
-            <i class="pi pi-search"></i>
-            <input
-              type="text"
-              placeholder="Enter key..."
-              class="rounded-4 p-1 w-100"
-              [(ngModel)]="searchValue"
-              (ngModelChange)="onUserSearched()"
-              pInputText
-            />
-          </span>
+    <div class="shopView-filter col-sm-6 col-md-2">
+        <div class="side-filter d-flex flex-column p-2">
+            <div class="cate-type w-100 p-2">
+                <h4>Filter</h4>
+                <p-divider></p-divider>
+                <!-- <div class="search-bar w-100 d-flex flex-nowrap">
+                    <span class="p-input-icon-left w-100 pe-2">
+                        <i class="pi pi-search"></i>
+                        <input
+                            type="text"
+                            placeholder="Enter key..."
+                            class="rounded-4 p-1 w-100"
+                            [(ngModel)]="searchValue"
+                            (ngModelChange)="onUserSearched()"
+                            pInputText
+                        />
+                    </span>
+                </div> -->
+                <div class="cate-type w-100 p-2">
+                    <h5>Category</h5>
+                    <p-tree
+                        [value]="listCate"
+                        class="w-full md:w-30rem"
+                        selectionMode="multiple"
+                        [(selection)]="selectedCategory"
+                    ></p-tree>
+
+                    <!-- <div
+                        *ngFor="let cate of listCate"
+                        class="field-checkbox p-1 d-flex align-items-center"
+                    >
+                        <p-radioButton
+                            name="group"
+                            [value]="cate.categoryId"
+                            [inputId]="cate.categoryId"
+                            [(ngModel)]="selectedCate"
+                            (onClick)="onCheckboxCateChange($event)"
+                        ></p-radioButton>
+                        <label [for]="cate.categoryId">{{
+                            cate.name || "Unknown"
+                        }}</label>
+                    </div> -->
+                </div>
+                <p-divider></p-divider>
+                <div class="brand-type w-100 p-2">
+                    <h5>Brand</h5>
+                    <div
+                        *ngFor="let brand of listBrand"
+                        class="field-checkbox p-1"
+                    >
+                        <p-radioButton
+                            name="group"
+                            [value]="brand.brandId"
+                            [inputId]="brand.brandId"
+                            [(ngModel)]="selectedBrand"
+                            (onClick)="onCheckboxBrandChange($event)"
+                        ></p-radioButton>
+                        <label [for]="brand.brandId">{{ brand.name }}</label>
+                    </div>
+                </div>
+
+                <p-divider></p-divider>
+                <div class="cate-type w-100 p-2">
+                    <h5>Price</h5>
+                    <p-slider
+                        [(ngModel)]="priceRange"
+                        [range]="true"
+                    ></p-slider>
+                </div>
+            </div>
         </div>
-        <div class="cate-type w-100 p-2">
-          <h5>Category</h5>
-          <div
-            *ngFor="let cate of listCate"
-            class="field-checkbox p-1 d-flex align-items-center"
-          >
-            <p-radioButton
-              name="group"
-              [value]="cate.categoryId"
-              [inputId]="cate.categoryId"
-              [(ngModel)]="selectedCate"
-              (onClick)="onCheckboxCateChange($event)"
-            ></p-radioButton>
-            <label [for]="cate.categoryId">{{ cate.name || "Unknown" }}</label>
-          </div>
-        </div>
-        <p-divider></p-divider>
-        <div class="brand-type w-100 p-2">
-          <h5>Brand</h5>
-          <div *ngFor="let brand of listBrand" class="field-checkbox p-1">
-            <p-radioButton
-              name="group"
-              [value]="brand.brandId"
-              [inputId]="brand.brandId"
-              [(ngModel)]="selectedBrand"
-              (onClick)="onCheckboxBrandChange($event)"
-            ></p-radioButton>
-            <label [for]="brand.brandId">{{ brand.name }}</label>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-  <div class="shopView-list d-flex flex-wrap col-10">
-    <p-dataView
-      #dv
-      class="w-100"
-      [value]="products"
-      layout="grid"
-      [rows]="10"
-      [paginator]="true"
-      emptyMessage="There are no product available"
-      filterBy="animalName,animalAge,animalGender,animalBreed,brandName"
-      filterBy="name, price, category"
-    >
-      <!-- <ng-template pTemplate="header">
+    <div class="shopView-list col-10">
+        <!-- <ng-template pTemplate="header">
         <span class="w-100 p-input-icon-left">
           <i class="pi pi-search"></i>
           <input
@@ -124,9 +135,114 @@
           />
         </span>
       </ng-template> -->
-      <ng-template let-product pTemplate="gridItem" class="bg-body">
-        <app-product-card [product]="product"></app-product-card>
-      </ng-template>
-    </p-dataView>
-  </div>
+
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+        <app-product-card
+            class="product"
+            [product]="products[0]"
+        ></app-product-card>
+    </div>
 </div>
